--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,5 +1,7 @@
+<div class="faceexp">
+    <img src="../../../assets/User_login_welocme.gif">
+</div>
 <!--Username Input-->
-<div class="login-inputs">
 <div class="form-group">
     <label>Username</label>
     <div class="form-input">
@@ -21,5 +23,5 @@
 <div>
     <button class="signin">Signin</button>
 </div>
-<p class="register-msg">Not a user? <a href="#"> Register</a></p>
-</div>
+<p class="register-msg">Not a user? <a href="#"> Register Here</a></p>
+<p class="other-msg">- - ---- Or Sign Up With ---- - -</p>
