--- a/src/app/authentication/authentication/authentication.component.html
+++ b/src/app/authentication/authentication/authentication.component.html
@@ -1,13 +1,22 @@
-<div class="container">
-    <!--Banner container-->
-    <div class="banner">
-      <img slideimage  class="slideimage">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319 730"><path fill="#364547" fill-opacity="1.2" d="M0,32L80,32C160,32,320,32,480,64C640,96,800,160,960,197.3C1120,235,1280,245,1360,250.7L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-    </div>
-    <!--Form container-->
-    <div class="form">
-      <!-- <img src="../../../assets/User_icon.jpg"> -->
-      <signin></signin>
-      
-    </div>
+<div class="background">
+  <div class="container">
+      <!--Banner container-->
+      <div class="banner">
+        <img slideimage  class="slideimage">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 319 730"><path fill="#364547" fill-opacity="1.2" d="M0,32L80,32C160,32,320,32,480,64C640,96,800,160,960,197.3C1120,235,1280,245,1360,250.7L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+      </div>
+      <!--Form container-->
+      <div class="form">
+        <signin></signin>
+        <!--Social medias & google Authentication-->
+        <div class="Authproviders">
+            <div class="Authproviderbutton">
+              <i class="fa fa-google social-icon"></i>
+            </div>
+            <div class="Authproviderbutton">
+              <i class="fa fa-facebook social-icon"></i>
+            </div>
+        </div>
+      </div>
+  </div>
 </div>
