--- a/src/app/authentication/authentication/authentication.component.css
+++ b/src/app/authentication/authentication/authentication.component.css
@@ -3,16 +3,16 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 158.5rem;
+    height: 81.5rem;
 }
 .container {
-    margin-left: 20.3%;
-    width: 57%;
-    height: 78rem;
-    margin-top: 34rem;
+    margin-left: 11.3%;
+    width: 78%;
+    height: 41rem;
+    margin-top: 3rem;
     display: inline-flex;
     background: #364547;
-    box-shadow: 4px 4px 7px  rgb(7, 6, 7);
+    box-shadow: 4px 4px 7px rgb(7 6 7);
 }
 
 .banner {
@@ -20,9 +20,9 @@
     display: grid;
 }
 
-.slideimage {
-    width: 68rem;
-    height: 78rem;
+.slideimage{
+    width: 32rem;
+    height: 41rem;
     margin-left: 0rem;
 }
 
@@ -32,11 +32,11 @@
     margin-right: 0.6rem;
 }
 
-svg {
-    height: 123.75rem;
-    margin-left: 59.3rem;
+svg{
+    height: 109.5rem;
+    margin-left: 23.3rem;
     width: 12rem;
-    margin-top: -48.08rem;
+    margin-top: -41.02rem;
 }
 
 
@@ -45,36 +45,35 @@ path{
 }
 
 
-.form{
-    margin-left: 15%;
+.form {
+    margin-left: 10%;
     margin-right: auto;
     display: block;
     overflow: hidden;
-    margin-top: 2rem;
-    width: 100%;
+    margin-top: -1rem;
+    width: 90%;
 }
 
-.Authproviderbutton
-{
-    height: 8rem;
-    width: 8rem;
+.Authproviders {
+    display: flex;
+    justify-content: center;
+    margin-left: -9rem;
+}
+
+.Authproviderbutton{
+    height: 4rem;
+    width: 4rem;
     border-radius: 4rem;
     margin-left: 4rem;
     background: #364547;
-    box-shadow: -3px 4px 8px #2b2727d6, 3px 3px 7px rgb(0 0 0 / 24%);
-}
-
-.Authproviders{
-    display: flex;
-    justify-content: center;
-    margin-left: -26rem;
+    box-shadow: -3px -3px 5px #615454d6, 3px 3px 8px rgb(3 3 3 / 24%);
 }
 
 .social-icon{
     color: hsl(180deg 30% 63%);
-    font-size: 4rem;
-    margin-left: 2.5rem;
-    margin-top: 2.3rem;
+    font-size: 2rem;
+    margin-left: 1.2rem;
+    margin-top: 1.1rem;
     color: #e9ec16ee;
 }
 @media screen and (max-width: 1024px){
@@ -197,19 +196,37 @@ path{
     }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 375px){
+
+    .container{
+        margin-top: 4rem;
+        margin-left: 0.6rem;
+    }
+    .background{
+        background: url('../../../assets/login_background_1.jpg');
+        height: 50.5rem;
+        width: 22.8rem;
+        margin-left: -0.8rem;
+        margin-top: -1rem;
+    }
     .slideimage {
-        width: 18.9rem;
+        width: 22rem;
         height: 28rem;
+        margin-top: -1.4rem;
     }
     .form{
-    margin-top: 23.1rem !important;
+      margin-top: 23.1rem !important;
     }
     .Authproviders {
-        margin-left: 4rem;
+        margin-left: 2.2rem;
     }
 
     .fa {
-        font-size: 1.1rem;
+        font-size: 1rem;
+    }
+
+    .social-icon{
+        margin-top: 0.5rem;
+        margin-left: 0.68rem;
     }
 }
