--- a/src/app/authentication/signin/signin.component.css
+++ b/src/app/authentication/signin/signin.component.css
@@ -1,51 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Jost:wght@300&display=swap');
 .form-group{
-    margin-top: 1.6rem;
+    margin-top: 0.9rem;
     margin-right: 3.6rem;
     width: 20rem;
     height: 20;
 }
 
+.faceexp img{
+    height: 10rem;
+    width: 10rem;
+    margin-left: 8rem;
+}
 /* for button */
 .signin {
     background: #364547;
     box-shadow: -3px 4px 8px #635a5a, 3px 3px 7px rgb(6 9 12 / 64%);
     border: none;
-    font-size: 2.2rem;
-    padding: 1.9rem;
-    width: 30rem;
+    font-size: 1.4rem;
+    padding: 1.4rem;
+    width: 22rem;
     font-weight: bold;
     color: #FAFF00;
-    margin-top: 3.1rem;
-    margin-left: 6.2rem;
+    margin-top: 2.1rem;
+    margin-left: 2.2rem;
     border-radius: 2rem;
     font-family: 'Gemunu Libre', sans-serif;
 }
 /*for Custom form input with div*/
-.form-input{
+.form-input {
     display: inline-flex;
     border: none;
     margin-top: 1.1rem;
-    padding: 1.5rem;
+    padding: 0.4rem;
     border-radius: 1.3rem;
-    width: 40rem;
+    width: 26rem;
     box-shadow: inset -3px 4px 8px #2b2727d6, inset 3px 3px 7px rgb(0 0 0 / 24%);
 }
    
-.fa{
+.fa {
     margin-bottom: auto;
     margin-top: auto;
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     margin-left: 0.5rem;
     color: #d1c9fb;
 }
+
 .append-icon{
     margin-right: 0.4rem !important;
 }
-label {
+label{
     display: block;
     font-weight: bold;
-    font-size: 2.3rem;
+    font-size: 1.2rem;
     color: #FAFF00;
     font-family: 'Gemunu Libre', sans-serif;
     margin-left: 0.5rem;
@@ -64,28 +70,24 @@ input {
     padding: 0.3rem;
     border: none;
     display: block;
-    font-size: 2.4rem;
+    font-size: 1.5rem;
     outline: none;
 }
+
 .register-msg{
-    margin-top: 3.5rem;
+    margin-top: 1.5rem;
     margin-left: 7.2rem;
-    font-size: 2.6rem;
+    font-size: 1.2rem;
     font-family: 'Jost', sans-serif;
     color: #FAFF00;
 }
-.other-msg
-{
-    margin-top: 3.2rem;
-    margin-left: 10.1rem;
-    font-size: 2.2rem;
+
+.other-msg {
+    margin-top: 1.2rem;
+    margin-left: 9.1rem;
+    font-size: 0.9rem;
     font-family: 'Jost', sans-serif;
     color: #72e415;
-}
-.faceexp img{
-    height: 18rem;
-    width: 18rem;
-    margin-left: 11rem;
 }
 a{
     color:aliceblue;
@@ -284,7 +286,7 @@ a{
     }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 375px){
     .faceexp img {
         margin-left: 12rem;
     }
@@ -293,5 +295,9 @@ a{
       margin-left: 5.5rem;
     }
     
-   
+    .form-input{
+        width: 18rem;
+    }
+
+
 }
